# lamina

./: .gitignore  BUG_REPORT.md  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  RECURSIVE_BUG_ANALYSIS.md  arithmetic  brainfuck_hw.lamina  brainfuck_like  calculator.lamina  calling_convention_bug_test  clear.sh  complete_memory_example.lamina  complex_arithmetic  comprehensive_memory_example.lamina  conditionals  constants  cool_program.lamina  core_memory_example.lamina  dealloc_stack_vs_heap_bug_test  debug_printing  division_small_types_bug_test  edge_cases  edge_cases_bug_test  external_functions  floating_point_bug_test  floating_point_register_bug_test  function_call_isolation  functions  gep_element_size_bug_test  gep_element_size_comprehensive_bug_test  gep_variable_indices  getfieldptr_offset_bug_test  heap_allocation_bug_test  heap_memory  hello_world  io_basic  io_buffer  io_comprehensive  (+75 more)
.github/workflows/: pre-release.yml  tagged-release.yml
benchmarks/2Dmatmul/: 2Dmatmul.c  2Dmatmul.cpp  2Dmatmul.cs  2Dmatmul.go  2Dmatmul.js  2Dmatmul.lamina  2Dmatmul.php  2Dmatmul.py  2Dmatmul.rb  2Dmatmul.rs  2Dmatmul.zig  MatMul2D.java  matmul2d.nim
benchmarks/factorial/: Factorial.java  expected_output.txt  factorial.c  factorial.cpp  factorial.cs  factorial.go  factorial.js  factorial.lamina  factorial.nim  factorial.php  factorial.py  factorial.rb  factorial.rs  factorial.zig
benchmarks/fibonacci/: Fibonacci.java  README.md  fibonacci  fibonacci.c  fibonacci.cpp  fibonacci.cs  fibonacci.go  fibonacci.js  fibonacci.lamina  fibonacci.lumir  fibonacci.nim  fibonacci.out  fibonacci.php  fibonacci.py  fibonacci.rb  fibonacci.rs  fibonacci.zig  fibonacci_manual_asm
benchmarks/primegeneration/: PrimeGeneration.java  expected_output.txt  primegeneration.c  primegeneration.cpp  primegeneration.cs  primegeneration.go  primegeneration.js  primegeneration.lamina  primegeneration.nim  primegeneration.php  primegeneration.py  primegeneration.rb  primegeneration.rs  primegeneration.zig
lamina-c/: Cargo.toml  Makefile  build.rs
lamina-c/examples/: builder_aot  builder_aot.c  builder_jit.c  raw_ir  raw_ir.c
lamina-c/include/: lamina.h  lamina_nightly.h
lamina-c/scripts/: build-sdk.sh
lamina-c/src/: builder.rs  error.rs  jit.rs  lib.rs  module.rs  types.rs
lamina-codegen/: Cargo.toml
lamina-codegen/src/: abi.rs  lib.rs  regalloc.rs  target_support.rs
lamina-codegen/src/aarch64/: abi.rs  frame.rs  mod.rs  regalloc.rs
lamina-codegen/src/powerpc/: abi.rs  frame.rs  mod.rs  regalloc.rs
lamina-codegen/src/riscv/: abi.rs  frame.rs  mod.rs  regalloc.rs
lamina-codegen/src/wasm/: abi.rs  mod.rs  regalloc.rs
lamina-codegen/src/x86_64/: abi.rs  frame.rs  mod.rs  regalloc.rs  util.rs
lamina-ir/: Cargo.toml
lamina-ir/src/: function.rs  instruction.rs  lib.rs  module.rs  ops.rs.stub  owned.rs  types.rs
lamina-ir/src/builder/: annotations.rs  arithmetic.rs  atomics.rs  blocks.rs  control_flow.rs  conversions.rs  functions.rs  io.rs  memory.rs  mod.rs  pointers.rs  simd.rs  tests.rs  tuples.rs  values.rs
lamina-mir/: Cargo.toml
lamina-mir/src/: block.rs  function.rs  instruction.rs  lib.rs  module.rs  register.rs  simd.rs  types.rs
lamina-platform/: Cargo.toml
lamina-platform/src/: detection.rs  lib.rs  simd.rs  target.rs
lamina-platform/src/simd/: runtime.rs
ras/: Cargo.toml
ras/src/: assembler.rs  error.rs  lib.rs  main.rs  object.rs  parser.rs  runtime.rs
ras/src/assembler/: aarch64.rs  common.rs  core.rs  mod.rs  x86_64.rs
ras/src/encoder/: aarch64.rs  mod.rs  traits.rs  x86_64.rs
scripts/: with_timeout.py
src/: error.rs  lib.rs  main.rs  target.rs
src/cli/: jit.rs  mod.rs  options.rs
src/codegen/: mod.rs
src/codegen/aarch64/: functions.rs  globals.rs  instructions.rs  mod.rs  state.rs  util.rs
src/codegen/common/: globals.rs  instruction_sel.rs  mod.rs  register_alloc.rs  stack_layout.rs  traits.rs  types.rs  utils.rs
src/codegen/mir_ver/: mod.rs  regalloc.rs
src/codegen/risc-v/: functions.rs  globals.rs  instructions.rs  mod.rs  state.rs  util.rs
src/codegen/riscv/: functions.rs  globals.rs  instructions.rs  mod.rs  state.rs  util.rs
src/codegen/wasm/: generate.rs  mod.rs  state.rs
src/codegen/x86_64/: functions.rs  globals.rs  instructions.rs  mod.rs  state.rs  (+5 more)
src/ir/: builder.rs  function.rs  instruction.rs  mod.rs  module.rs  types.rs
src/mir/: README.md  block.rs  function.rs  instruction.rs  mod.rs  module.rs  register.rs  simd.rs  types.rs
src/mir_codegen/: abi.rs  assemble.rs  capability.rs  common.rs  limits.rs  link.rs  mod.rs  regalloc.rs  settings.rs
src/parser/: functions.rs  globals.rs  impl_.rs  instructions.rs  mod.rs  parser.rs  state.rs  types.rs  values.rs
src/runtime/: c_abi_dynamic.rs  compiler.rs  executor.rs  macro.rs  macro_helpers.rs  mod.rs  sandbox.rs
testcases/: README.md  arithmetic.lamina  array_operations_comprehensive.lamina  brainfuck_like.lamina  calling_convention_bug_test.lamina  capable_lamina.lamina  complex_arithmetic.lamina  conditionals.lamina  constants.lamina  dealloc_stack_vs_heap_bug_test.lamina  debug_printing.lamina  division_small_types_bug_test.expected  division_small_types_bug_test.lamina  edge_cases.expected  edge_cases.lamina  edge_cases_bug_test.expected  edge_cases_bug_test.lamina  edge_cases_extra.expected  edge_cases_extra.lamina  external_functions.expected  external_functions.lamina  floating_point_bug_test.expected  floating_point_bug_test.lamina  floating_point_register_bug_test.lamina  function_call_isolation.expected  function_call_isolation.lamina  functions.lamina  gep_element_size_bug_test.expected  gep_element_size_bug_test.lamina  gep_element_size_comprehensive_bug_test.lamina  gep_variable_indices.expected  gep_variable_indices.lamina  getfieldptr_offset_bug_test.lamina  heap_allocation_bug_test.expected  heap_allocation_bug_test.lamina  heap_memory.expected  heap_memory.lamina  hello_world.lamina  io_basic.lamina  io_buffer.expected  (+69 more)
tests/: bench_2dmatmul.rs  bench_factorial.rs  bench_fibonacci.rs  bench_primegeneration.rs  integration_tests.rs
(+77 files in other folders)
