[workspace]
members = ["lamina-codegen", "lamina-ir", "lamina-mir", "lamina-platform"]

[package]
name = "lamina"
version = "0.0.10"
edition = "2024"
authors = ["Eira <eira@nornity.com>"]
description = "High-performance compiler backend for Lamina Intermediate Representation"
documentation = "https://docs.rs/lamina"
repository = "https://github.com/SkuldNorniern/lamina"
readme = "README.md"
license = "Apache-2.0"
keywords = ["compiler", "backend", "IR", "assembly", "codegen"]
categories = ["compilers", "development-tools", "parsing"]
exclude = [ "benchmarks/", "testcases/"]

[[bin]]
name = "lamina"
path = "src/main.rs"

[dependencies]
ras = { package = "lamina-ras", version = "0.1.1", features = ["encoder"] }
lamina-ir = { path = "lamina-ir", version = "0.1.0" }
lamina-platform = { version = "0.1.0" }
lamina-mir = { version = "0.1.0" }
lamina-codegen = { path = "lamina-codegen", version = "0.1.1" }

[features]
default = ["encoder"]
# Enable MIR binary encoding support for JIT creation (MIR → Binary)
encoder = []
# Enable the use of the mold linker instead of the default system linker (usually ld via gcc)
#use_mold = []
# Enable experimental/nightly features (may change without notice)
# When enabled, automatically enables nightly in all lamina-* dependencies
nightly = [
    "lamina-ir/nightly",
    "lamina-platform/nightly",
    "lamina-mir/nightly",
    "lamina-codegen/nightly",
]

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
