[package]
name = "lamina-codegen"
version = "0.1.0"
edition = "2024"
authors = ["Eira <eira@nornity.com>"]
description = "Codegen utilities for Lamina (register allocation, ABI, frame management)"
license = "Apache-2.0"
keywords = ["compiler", "codegen", "register-allocation", "abi"]
categories = ["compilers", "development-tools"]

[dependencies]
lamina-platform = { path = "../lamina-platform" }
lamina-mir = { path = "../lamina-mir" }

[features]
default = []
# Enable experimental/nightly features (may change without notice)
nightly = []
