[package]
name = "lamina-codegen"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
authors = ["Eira <eira@nornity.com>"]
description = "Codegen utilities for Lamina (register allocation, ABI, frame management)"
license = "Apache-2.0"
keywords = ["compiler", "codegen", "register-allocation", "abi"]
categories = ["compilers", "development-tools"]
repository = "https://github.com/SkuldNorniern/lamina"

[dependencies]
lamina-platform = { path = "../lamina-platform", version = "0.1.1" }
lamina-mir = { version = "0.1.0" }

[features]
default = []
# Enable experimental/nightly features (may change without notice)
nightly = []
