[package]
name = "lamina-mir"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Eira <eira@nornity.com>"]
description = "MIR (Machine Intermediate Representation) type definitions for Lamina"
license = "Apache-2.0"
keywords = ["compiler", "mir", "ir"]
categories = ["compilers", "development-tools"]
repository = "https://github.com/SkuldNorniern/lamina"

[dependencies]
lamina-platform = { path = "../lamina-platform", version = "0.1.1" }

[features]
default = []
nightly = []
