[package]
name = "lamina-platform"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
authors = ["Eira <eira@nornity.com>"]
description = "Platform and target detection for Lamina compiler"
license = "Apache-2.0"
keywords = ["compiler", "target", "platform", "architecture"]
categories = ["compilers", "development-tools"]
repository = "https://github.com/SkuldNorniern/lamina"

[lib]
name = "lamina_platform"
path = "src/lib.rs"

[features]
default = []
# Enable experimental/nightly features (may change without notice)
nightly = []

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
